--- a/barbex/assets/sass/section/_blog.scss
+++ b/barbex/assets/sass/section/_blog.scss
@@ -10,6 +10,8 @@ Blog
             overflow: hidden;
             img {
                 width: 100%;
+                height: 300px;
+                object-fit: cover;
                 transition: all 0.5s ease-out 0s;
                 transform: scale(1);
 
@@ -156,9 +158,11 @@ Blog Standard
                 overflow: hidden;
                 img {
                     width: 100%;
+                    height: 250px;
+                    object-fit: cover;
                     transition: all 0.5s ease-out 0s;
                     transform: scale(1);
-    
+
                 }
                 &:hover {
                     img {
