--- a/barbex/assets/sass/section/_header.scss
+++ b/barbex/assets/sass/section/_header.scss
@@ -186,9 +186,10 @@ Menu Bar
                             line-height: 26px;
                             font-weight: 900;
                             transition: all 0.4s ease-out 0s;
-                            text-transform: capitalize;      
-                            padding: 47px 26px;   
-                            font-family: var(--heading-font);              
+                            text-transform: capitalize;
+                            padding: 47px 26px;
+                            font-family: var(--heading-font);
+                            white-space: nowrap;
                         }
                         &:last-child a {
                             padding-right: 0;
@@ -400,14 +401,14 @@ Menu Bar
                     }
                 }
                 &-cart {
-                    margin-left: 30px;
+                    margin-left: 15px;
                     .header__area-menubar-right-box-cart-link {
                         position: relative;
                         display: flex;
                         align-items: center;
                         justify-content: center;
-                        width: 45px;
-                        height: 45px;
+                        width: 35px;
+                        height: 35px;
                         background: #f8f9fa;
                         border-radius: 50%;
                         color: #333;
@@ -418,29 +419,29 @@ Menu Bar
                         &:hover {
                             background: #28a745;
                             color: #fff;
-                            transform: scale(1.1);
+                            transform: scale(1.05);
                             border-color: #28a745;
                         }
 
                         i {
-                            font-size: 20px;
+                            font-size: 16px;
                         }
 
                         .cart-count {
                             position: absolute;
-                            top: -8px;
-                            right: -8px;
+                            top: -6px;
+                            right: -6px;
                             background: #dc3545;
                             color: #fff;
                             border-radius: 50%;
-                            width: 24px;
-                            height: 24px;
+                            width: 20px;
+                            height: 20px;
                             display: inline-flex;
                             align-items: center;
                             justify-content: center;
-                            font-size: 10px;
+                            font-size: 9px;
                             font-weight: bold;
-                            min-width: 24px;
+                            min-width: 20px;
                             border: 2px solid #fff;
                             transition: all 0.3s ease;
                             opacity: 0;
